--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="signin-content">
                     <div class="signin-image">
-                        <figure><img src="images/about.png" alt="sing up image"></figure>
+                        <figure><img src="images/About.png" alt="sing up image"></figure>
                         <a href="SignUp.html" class="signup-image-link">Create an account</a>
                     </div>
 
